# GhostEscape

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
.claude/: CLAUDE.md
cmake/: BuildHelpers.cmake  CompilerSettings.cmake  Dependencies.cmake  ImGui.cmake  ProjectInfo.cmake  QUICK_REFERENCE.md  README.md  RuntimePath.cmake
cmake/scripts/: CopyAssets.cmake  CopyDLLs.cmake  README.md
src/: Player.cpp  Player.h  SceneMain.cpp  SceneMain.h  bg_stars.cpp  bg_stars.h  enemy.cpp  enemy.h  main.cpp  player.cpp  player.h  scene_main.cpp  scene_main.h  scene_title.cpp  scene_title.h  spawner.cpp  spawner.h  weapon_thunder.cpp  weapon_thunder.h
src/affiliates/: affiliate_bar.cpp  affiliate_bar.h  collider.cpp  collider.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h  text_label.cpp  text_label.h
src/core/: Actor.h  Game.cpp  Game.h  Object.h  ObjectScreen.h  ObjectWord.cpp  ObjectWord.h  Scene.cpp  Scene.h  actor.cpp  actor.h  asset_store.cpp  asset_store.h  def.h  game.cpp  game.h  main.cpp  object.cpp  object.h  object_affiliate.cpp  object_affiliate.h  object_screen.h  object_world.cpp  object_world.h  scene.cpp  scene.h  stats.cpp  stats.h  timer.cpp  timer.h  weapon.cpp  weapon.h
src/screen/: hud_button.cpp  hud_button.h  hud_skill.cpp  hud_skill.h  hud_stats.cpp  hud_stats.h  hud_text.cpp  hud_text.h  ui_mouse.cpp  ui_mouse.h
src/world/: effect.cpp  effect.h  spell.cpp  spell.h
